Defined ApplicationContext as static field Removed repository / services from construct Set confirm dialog message Removed deprecated newInstance()